<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="16dp"
                tools:ignore="ScrollViewSize">

                <TextView
                    android:id="@+id/habit_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_name" />

                <EditText
                    android:id="@+id/edit_habit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:minHeight="48dp"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp"
                    tools:text="Пить пиво" />

                <TextView
                    android:id="@+id/habit_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:minHeight="48dp"
                    android:textColor="@color/colorHint"
                    android:textSize="16sp"
                    tools:text="Пить пиво" />

                <TextView
                    android:id="@+id/habit_current_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/type_text" />

                <RadioGroup
                    android:id="@+id/type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/first_radio"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/good_habit" />

                    <RadioButton
                        android:id="@+id/second_radio"
                        android:layout_width="match_parent"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/bad_habit" />
                </RadioGroup>

                <TextView
                    android:id="@+id/habit_priority_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/priority_text" />

                z

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:entries="@array/priorities"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/habit_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Периодичность" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:layout_marginTop="32dp"
                        android:text="@string/color_choose_text"
                        app:drawableRightCompat="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/link_getter_description" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/color_button"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"
                        app:backgroundTint="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/link_getter_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/repeat"
                        android:textColor="@color/colorHint"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="7"
                        android:textColor="@color/colorHint"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/link_getter_description"
                        app:layout_constraintStart_toEndOf="@+id/link_getter_description"
                        app:layout_constraintTop_toTopOf="@+id/link_getter_description"
                        android:layout_marginLeft="8dp" />

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_frequency"
                        android:textColor="@color/colorHint"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/edit_times"
                        app:layout_constraintStart_toEndOf="@+id/edit_times"
                        app:layout_constraintTop_toTopOf="@+id/edit_times"
                        android:layout_marginLeft="8dp" />

                    <EditText
                        android:id="@+id/edit_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        android:hint="5"
                        android:textColor="@color/colorHint"
                        android:textSize="14sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textview2"
                        app:layout_constraintStart_toEndOf="@+id/textview2"
                        app:layout_constraintTop_toTopOf="@+id/textview2"
                        android:layout_marginLeft="8dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_days"
                        android:textColor="@color/colorHint"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/edit_days"
                        app:layout_constraintStart_toEndOf="@+id/edit_days"
                        app:layout_constraintTop_toTopOf="@+id/edit_days"
                        android:layout_marginLeft="8dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="match_parent"
                    android:textColor="@color/design_default_color_error"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/error_text"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:gravity="center_horizontal" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/habit_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black"
                    android:text="@string/button_save" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>